[tool.poetry]
name = "mwc1-unit02-lab-pipes"
version = "0.1.0"
description = ""
authors = ["Chris Proctor <github.com@accounts.chrisproctor.net>"]
readme = "README.md"
packages = [{include = "mwc1_unit02_lab_pipes"}]

[tool.poetry.dependencies]
python = "^3.11"
wordflow = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
